--- a/BB25Mapeditor.html
+++ b/BB25Mapeditor.html
@@ -58,7 +58,7 @@
 
      </body>
     <script>
-      imageBounds = [[ 21.48637, 39.1847],[21.49048, 39.19108]];
+
       
 
 d3.select('#imgstr1').attr("value",imageBounds[0][0])
@@ -75,6 +75,7 @@ settim = new Date()
 initialise_map()
 initialise_settings()
 
+/*
 initialise_firebase()
 
 database = firebase.database();
@@ -92,7 +93,9 @@ read_current()
 
 daydata = read_a_day(24,heutag)
 
-setTimeout(function(){total_people},3000)
+setTimeout(function(){total_people},3000)*/
+
+
 /*
 setInterval(function (){refresh()},180000)
 
