--- a/BB25CMD.html
+++ b/BB25CMD.html
@@ -111,6 +111,7 @@ function balad_plot_malen(data){
       type: 'date', // Format x-axis as dates
     },
     yaxis: {
+      range: [0,16000],
       title: 'patrons on site',
     },
     showlegend: false, // Show legend
